tests/ui/parser/issues/issue-7970b.rs
fn main() {}

macro_rules! test {}
//~^ ERROR macros must contain at least one rule
